--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,4 +1,18 @@
-.main-button {
+.button-component {
+  width: 100%;
+  height: 70px;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  padding: 20px;
+  background-color: #1f27f5;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+
+}
+
+/* .main-button {
   width: 300px;
   padding: 20px 30px;
   background: rgb(21, 56, 79);
@@ -15,4 +29,4 @@
 
 .secondary-button {
   background: rgb(161, 196, 65);
-}
+} */
